[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.3.0"
indoc = "1.0"
itertools = "0.10"
num = "0.4.0"
regex = "1"
lazy_static = "1.4.0"
cached = "0.41.0"
